# sdk_design

./: .gitignore  CMakeLists.txt  README.md  TODO
.circleci/: config.yml
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in
include/: my_sdk.h
models/: det1_bin.h  det1_param.h  det2_bin.h  det2_param.h  det3_param.h
python/: py_binding.cpp  test_pybinding.py
src/: main.cpp  mtcnn.cpp  mtcnn.h  my_sdk.cpp
tests/: test.cpp
tools/: toolchain-aarch64.cmake  toolchain-arm32.cmake
